--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@tenpi/tslint": "^1.1.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/unzipper": "^0.10.4",
     "cross-env": "^7.0.3",
     "css-loader": "^5.0.1",
     "del-cli": "^3.0.1",
@@ -80,10 +81,13 @@
     "bootstrap": "^4.6.0",
     "electron-store": "^7.0.1",
     "electron-updater": "^4.3.5",
+    "image-size": "^0.5.5",
+    "pixiv.ts": "^0.4.2",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
     "react-reorder": "^3.0.0-alpha.7",
-    "shade-blend-color": "^1.0.0"
+    "shade-blend-color": "^1.0.0",
+    "unzipper": "^0.10.11"
   }
 }
