--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "cross-env": "^7.0.3",
     "css-loader": "^5.0.1",
     "del-cli": "^3.0.1",
-    "electron": "^11.2.1",
+    "electron": "^15.3.0",
     "electron-builder": "^22.9.1",
     "file-loader": "^6.2.0",
     "fork-ts-checker-webpack-plugin": "^6.1.0",
@@ -77,12 +77,13 @@
     "webpack-cli": "^4.4.0"
   },
   "dependencies": {
+    "@electron/remote": "^2.0.1",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "electron-store": "^7.0.1",
     "electron-updater": "^4.3.5",
     "image-size": "^0.5.5",
-    "pixiv.ts": "^0.4.2",
+    "pixiv.ts": "^0.4.5",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
