--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pixiv-downloader",
-  "version": "0.0.9",
+  "version": "0.1.0",
   "description": "An app that downloads images/ugoira from Pixiv",
   "main": "dist/main.js",
   "scripts": {
@@ -26,6 +26,21 @@
     "directories": {
       "buildResources": "assets",
       "output": "build"
+    },
+    "mac": {
+      "target": {
+        "target": "dmg",
+        "arch": "x64"
+      },
+      "category": "public.app-category.utilities"
+    },
+    "dmg": {
+      "title": "Music Player",
+      "background": "./assets/background.png",
+      "window": {
+        "width": 540,
+        "height": 380
+      }
     },
     "win": {
       "target": "nsis"
@@ -61,7 +76,7 @@
     "css-loader": "^5.0.1",
     "del-cli": "^3.0.1",
     "electron": "^15.3.0",
-    "electron-builder": "^22.9.1",
+    "electron-builder": "^22.13.1",
     "file-loader": "^6.2.0",
     "fork-ts-checker-webpack-plugin": "^6.1.0",
     "html-loader": "^1.3.2",
