--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "npm run clean && webpack && cross-env DEVELOPMENT=true electron dist/main.js",
     "clean": "del-cli ./dist",
-    "release": "npm run clean ./build && webpack && electron-builder -p always"
+    "release": "npm run clean ./build && webpack && electron-builder -mw -p always"
   },
   "keywords": [
     "pixiv",
@@ -35,7 +35,7 @@
       "category": "public.app-category.utilities"
     },
     "dmg": {
-      "title": "Music Player",
+      "title": "${productName}",
       "background": "./assets/background.png",
       "window": {
         "width": 540,
