--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pixiv-downloader",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "An app that downloads images/ugoira from Pixiv",
   "main": "dist/main.js",
   "scripts": {
@@ -43,7 +43,10 @@
       }
     },
     "win": {
-      "target": "nsis"
+      "target": {
+        "target": "nsis",
+        "arch": "x64"
+      }
     },
     "nsis": {
       "oneClick": false,
@@ -75,7 +78,7 @@
     "cross-env": "^7.0.3",
     "css-loader": "^5.0.1",
     "del-cli": "^3.0.1",
-    "electron": "^15.3.0",
+    "electron": "^14.0.0",
     "electron-builder": "^22.13.1",
     "file-loader": "^6.2.0",
     "fork-ts-checker-webpack-plugin": "^6.1.0",
