--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "npm run clean && webpack && cross-env DEVELOPMENT=true electron dist/main.js",
     "clean": "del-cli ./dist",
-    "release": "npm run clean ./build && webpack && electron-builder -mw -p always"
+    "release": "npm run clean ./build && webpack && electron-builder -mwl -p always"
   },
   "keywords": [
     "pixiv",
@@ -56,6 +56,13 @@
       "createDesktopShortcut": "always",
       "installerSidebar": "./assets/installer.bmp",
       "uninstallerSidebar": "./assets/installer.bmp"
+    },
+    "linux": {
+      "target": {
+        "target": "appImage",
+        "arch": "x64"
+      },
+      "category": "Utility"
     },
     "files": [
       "dist/**/*",
