--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pixiv-downloader",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "An app that downloads images/ugoira from Pixiv",
   "main": "dist/main.js",
   "scripts": {
@@ -73,7 +73,8 @@
       "repo": "Pixiv-Downloader",
       "owner": "Tenpi",
       "releaseType": "draft"
-    }
+    },
+    "asarUnpack": "node_modules/pixiv.ts"
   },
   "author": "Tenpi",
   "license": "MIT",
@@ -109,7 +110,7 @@
     "electron-store": "^7.0.1",
     "electron-updater": "^4.3.5",
     "image-size": "^0.5.5",
-    "pixiv.ts": "^0.5.1",
+    "pixiv.ts": "^0.5.3",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
