--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pixiv-downloader",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "An app that downloads images/ugoira from Pixiv",
   "main": "dist/main.js",
   "scripts": {
@@ -74,7 +74,8 @@
       "owner": "Tenpi",
       "releaseType": "draft"
     },
-    "asarUnpack": "node_modules/pixiv.ts"
+    "asarUnpack": "node_modules/pixiv.ts",
+    "asar": false
   },
   "author": "Tenpi",
   "license": "MIT",
@@ -86,12 +87,12 @@
     "cross-env": "^7.0.3",
     "css-loader": "^5.0.1",
     "del-cli": "^3.0.1",
-    "electron": "^14.0.0",
-    "electron-builder": "^22.13.1",
+    "electron": "^28.2.1",
+    "electron-builder": "^23.0.2",
     "file-loader": "^6.2.0",
     "fork-ts-checker-webpack-plugin": "^6.1.0",
     "html-loader": "^1.3.2",
-    "html-webpack-plugin": "^4.5.1",
+    "html-webpack-plugin": "^5.6.0",
     "less": "^4.1.0",
     "less-loader": "^7.3.0",
     "mini-css-extract-plugin": "^1.3.5",
@@ -103,7 +104,7 @@
     "webpack-cli": "^4.4.0"
   },
   "dependencies": {
-    "@electron/remote": "^2.0.1",
+    "@electron/remote": "^2.1.2",
     "axios": "^0.21.1",
     "base64url": "^3.0.1",
     "bootstrap": "^4.6.0",
