--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pixiv-downloader",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "description": "An app that downloads images/ugoira from Pixiv",
   "main": "dist/main.js",
   "scripts": {
@@ -30,7 +30,7 @@
     "mac": {
       "target": {
         "target": "dmg",
-        "arch": "x64"
+        "arch": "arm64"
       },
       "category": "public.app-category.utilities"
     },
@@ -111,7 +111,7 @@
     "electron-store": "^7.0.1",
     "electron-updater": "^4.3.5",
     "image-size": "^0.5.5",
-    "pixiv.ts": "^0.5.3",
+    "pixiv.ts": "^0.6.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
