--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "pixiv-downloader",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "description": "An app that downloads images/ugoira from Pixiv",
   "main": "dist/main.js",
   "scripts": {
     "start": "npm run clean && webpack && cross-env DEVELOPMENT=true electron dist/main.js",
     "clean": "del-cli ./dist",
-    "release": "npm run clean ./build && webpack && electron-builder -mwl -p always"
+    "release": "npm run clean ./build && webpack && cross-env CSC_IDENTITY_AUTO_DISCOVERY=false electron-builder -mwl -p always"
   },
   "keywords": [
     "pixiv",
